Non-symetrical bevel issue on edge of inseted face #45795

Closed
opened 2015-08-14 10:33:50 +02:00 by Tomas Dostal · 9 comments

System Information
WIN 7

Blender Version
Broken: 2.75a c27589e

Short description of error
Not symetrical result when beveling edge of face where inset was created

Exact steps for others to reproduce the error

  1. Create cube
  2. Select one face and inset it
  3. Select edge of where 4 edges are connected to vertices (edge of cube)
  4. Bevel it
  5. See issue probably on right side

Test file is attached

bevel_issue.blend

Thanks

**System Information** WIN 7 **Blender Version** Broken: 2.75a c27589e **Short description of error** Not symetrical result when beveling edge of face where inset was created **Exact steps for others to reproduce the error** 1. Create cube 2. Select one face and inset it 3. Select edge of where 4 edges are connected to vertices (edge of cube) 4. Bevel it 5. See issue probably on right side Test file is attached [bevel_issue.blend](https://archive.blender.org/developer/F224294/bevel_issue.blend) Thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TomasDostal

Added subscriber: @TomasDostal

Added subscribers: @howardt, @mont29

Added subscribers: @howardt, @mont29
Howard Trickey was assigned by Bastien Montagne 2015-08-14 12:53:39 +02:00

Can confirm the issue, one corner is bevelled (as one would expect imho), while the other is handled as if 'inner' edge did not exist somehow… @howardt, think this is a new case?

Can confirm the issue, one corner is bevelled (as one would expect imho), while the other is handled as if 'inner' edge did not exist somehow… @howardt, think this is a new case?
Member

Yes, I think this is new behavior. I have recently changed the code around what happens to unbeveled edges attached to a vertex where at least one other edge is beveled. It seems different choices are being made at each end of that beveled edge.

Interestingly, from reading Tomas's initial description and Bastien's last comment, it may not be immediately obvious which end is "right", but it certainly looks strange when there are different choices on the different ends. Seems like Tomas prefers the left side (no corner bevel) and Bastien prefers the right (corner bevel). From recent artist feedback, I was going more for the effect of the left side (no corner bevel here).

I will dig into what is going on here, and try to make both ends look like the left end (no corner bevel).

Yes, I think this is new behavior. I have recently changed the code around what happens to unbeveled edges attached to a vertex where at least one other edge is beveled. It seems different choices are being made at each end of that beveled edge. Interestingly, from reading Tomas's initial description and Bastien's last comment, it may not be immediately obvious which end is "right", but it certainly looks strange when there are different choices on the different ends. Seems like Tomas prefers the left side (no corner bevel) and Bastien prefers the right (corner bevel). From recent artist feedback, I was going more for the effect of the left side (no corner bevel here). I will dig into what is going on here, and try to make both ends look like the left end (no corner bevel).
Author

Hi Howard, as you wrote it is not obvious what result is right. I would like to say that the "left one" is only my personal preference. This is something what I would expect from my experience.

Anyway I was checking other 3d packages and results are also different but mostly "right one".

We discussed this with my coleagues and the option to pick result would be the best. But you know us artists we want evrything ;)

Nevertheles I agree with you that result can be any of them but same for both sides.

Hi Howard, as you wrote it is not obvious what result is right. I would like to say that the "left one" is only my personal preference. This is something what I would expect from my experience. Anyway I was checking other 3d packages and results are also different but mostly "right one". We discussed this with my coleagues and the option to pick result would be the best. But you know us artists we want evrything ;) Nevertheles I agree with you that result can be any of them but same for both sides.

This issue was referenced by 9b43fce3c1

This issue was referenced by 9b43fce3c192be3172eb883af50445008daf5f53
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Thanks for the bug report.
It turns out that both ends were creating a polygon around the ends of the beveled edge, but I was using an inconsistent way of determining the length to 'slide' along unbeveled edges. The commit in the previous comment fixes that.

Another possibility would be to move further in the direction of letting 'in-plane' edges move all over the place and use that to avoid creating vertex polygons at all here. The result would look like:

othereway.png

But that requires more special casing in the code, so will not do that unless more demand for this crops up.

Thanks for the bug report. It turns out that both ends were creating a polygon around the ends of the beveled edge, but I was using an inconsistent way of determining the length to 'slide' along unbeveled edges. The commit in the previous comment fixes that. Another possibility would be to move further in the direction of letting 'in-plane' edges move all over the place and use that to avoid creating vertex polygons at all here. The result would look like: ![othereway.png](https://archive.blender.org/developer/F224713/othereway.png) But that requires more special casing in the code, so will not do that unless more demand for this crops up.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45795
No description provided.